# lazer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.zig
include/: lazer.h
lzr/: Cargo.toml  README.md
lzr/src/: lib.rs
lzr/src/os/: condvar.rs  ffi.rs  info.rs  lock.rs  mod.rs  page.rs  print.rs  thread.rs
lzr/src/vm/: atom.rs  hash.rs  mod.rs  term.rs
spec/: bytecode.md  grammar
src/: PLANNING.md  heap.zig  lazer.h  lock.zig  main.c  main.rs  panic.rs
src/compiler/: ast.rs
src/os/: memory.zig
src/platform/: hash.zig  heap.zig  lock.rs  memory.rs  memory.zig  mod.rs
src/runtime/: atom.c  atom.h  atom.zig  atomic.h  hash.c  hash.h  heap.rs  mod.rs  system.h
src/runtime/memory/: heap.c  heap.h  memory.c  memory.h
src/runtime/os/: heap.c  lock.c  lock.h  memory.c  memory.h
src/vm/: PLANNING.md  atom.c  atom.h  atomic.h  hash.c  hash.h  info.c  info.h  lock.h  memory.h  module.h  queue.c  queue.h  qword.c  qword.h  system.h  vm.c  vm.h
src/vm/os/: lock.c  memory.c  memory.h  system.c
